Implemented Backend CRUD, Websocket, pubsub, concurrency handling

--- a/backend/.env
+++ b/backend/.env
@@ -3,9 +3,12 @@ POSTGRES_USER=admin
 POSTGRES_PASSWORD=password
 POSTGRES_DB=todo_db
 POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
+POSTGRES_PORT=5433
 
 # redis config
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_DB=0
+
+# pubsub channel
+TASKS_CHANNEL=tasks_channel
