--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,24 @@
-version: '3.8'
+version: "3.8"
 
 services:
+  backend:
+    build: ./backend
+    container_name: backend-container
+    ports:
+      - "8001:8000"
+    depends_on:
+      - redis
+      - postgres
+    restart: always
+    environment:
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=todo_db
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+
   redis:
     image: redis:latest
     container_name: redis-container
@@ -17,7 +35,7 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: todo_db
     ports:
-      - "5432:5432"
+      - "5433:5432"
     restart: always
     volumes:
       - postgres_data:/var/lib/postgresql/data
