--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: ./backend
     container_name: backend-container
     ports:
-      - "8001:8000"
+      - "8002:8000"
     depends_on:
       - redis
       - postgres
@@ -19,24 +19,24 @@ services:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
   
-  frontend:
-    build: ./frontend
-    container_name: frontend-container
-    ports:
-      - "3000:3000"
-    depends_on:
-      - backend
-    restart: always
-    environment:
-      - NEXT_PUBLIC_API_URL=http://backend-container:8000
-      - NEXT_PUBLIC_WS_URL=ws://backend-container:8000/ws/
+  # frontend:
+  #   build: ./frontend
+  #   container_name: frontend-container
+  #   ports:
+  #     - "3000:3000"
+  #   depends_on:
+  #     - backend
+  #   restart: always
+  #   environment:
+  #     - NEXT_PUBLIC_API_URL=http://backend-container:8000
+  #     - NEXT_PUBLIC_WS_URL=ws://backend-container:8000/ws/
 
   redis:
     image: redis:latest
     container_name: redis-container
     command: redis-server --save "" --appendonly no
     ports:
-      - "6379:6379"
+      - "6380:6379"
     restart: always
 
   postgres:
@@ -47,7 +47,7 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: todo_db
     ports:
-      - "5433:5432"
+      - "5434:5432"
     restart: always
     volumes:
       - postgres_data:/var/lib/postgresql/data
