--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
 version: "3.8"
 
 services:
+  frontend:
+    build: ./frontend
+    container_name: frontend-container
+    ports:
+      - "3001:3000"
+    depends_on:
+      - backend
+    environment:
+      - NEXT_PUBLIC_API_URL=http://backend:8000
+      - NEXT_PUBLIC_WS_URL=ws://backend:8000/ws
+    restart: always
+
   backend:
     build: ./backend
     container_name: backend-container
