--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -1,24 +1,7 @@
-# Ignore node modules as they're installed during image build
-node_modules
-
-# Ignore build output (it will be generated inside the image)
-.next
-
-# Ignore local environment files containing secrets
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Ignore log files
-npm-debug.log
-yarn-debug.log
-
-# Ignore Docker configuration files
 Dockerfile
-docker-compose*
-
-# Ignore git metadata
+.dockerignore
+node_modules
+npm-debug.log
+README.md
+.next
 .git
-.gitignore
